--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -11,6 +11,7 @@
 
 .center-block > p {
   font-size: 16px;
+  margin: 0;
 }
 
 .header-center-block:not(.mobile) {
@@ -60,11 +61,28 @@
 }
 
 #results {
-  margin-top: 5px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+#results:not(.mobile) {
+  width: 385px;
+}
+
+#results.mobile {
+  width: 90%;
 }
 
 #results > div {
   margin-top: 3px;
+}
+
+#results:not(.mobile) > div {
+  width: 600px;
+}
+
+#results.mobile > div {
+  width: 100%;
 }
 
 #results-pagination-ul {
