--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
   {% endblock %}
   {% block local_scripts %}
     <script>MOBILE = {{ mobile|lower }}</script>
+    <script>TRANSLATIONS = {{ translations|tojson }}</script>
     <script type="application/javascript" src="{{url_for('static', filename='js/index.js')}}"></script>
   {% endblock %}
 {% endblock %}
@@ -55,20 +56,22 @@
       <h1 class="title">{{ config.TITLE }}</h1>
     </div>
     <div class="row-fluid text-center center-block{% if mobile %} mobile{% endif %}">
-      <p>{{ _('Einstiegsmöglichkeit in die Geodateninfrastruktur der Hanse- und Universitätsstadt Rostock und Schnittstelle aller Anwendungen mit Raumbezug des Kataster-, Vermessungs- und Liegenschaftsamtes der Hanse- und Universitätsstadt Rostock') }}</p>
+      <p>{{ _('Einstieg in die Geodateninfrastruktur') }}</p>
+      <p>{{ _('und Schnittstelle aller Anwendungen mit Raumbezug') }}</p>
+      <p>{{ _('der Hanse- und Universitätsstadt Rostock') }}</p>
     </div>
     <div class="row-fluid text-center search-center-block{% if mobile %} mobile{% endif %}">
       <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
       <input class="form-control{% if mobile %} mobile{% endif %}" id="search-input" placeholder="{{ _('Suche in Themen und Katalog') }}…" type="search" />
       <span id="clear-search-input" class="glyphicon glyphicon-remove-circle"></span>
-      <div id="results"></div>
+      <div id="results"{% if mobile %} class="mobile"{% endif %}></div>
       <div id="results-pagination"></div>
     </div>
     <div class="row-fluid text-center center-block{% if mobile %} mobile{% endif %}">
       {% if not mobile %}<div class="col-md-6">{% endif %}
         <a href="{{ url_for('themes', lang_code = g.current_lang) }}">
           <span class="glyphicon mega-glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-          <p class="mega-glyphicon-text{% if not mobile %} text-justify{% else %} mobile{% endif %}"><span class="bold">{{ _('Themen') }}</span> – {{ _('Finden Sie zu einem Thema, das Sie interessiert, in Ihrer Nähe alle Angebote aus der Geodateninfrastruktur der Hanse- und Universitätsstadt Rostock.') }}</p>
+          <p class="mega-glyphicon-text{% if not mobile %} text-justify{% else %} mobile{% endif %}"><span class="bold">{{ _('Themen') }}</span> – {{ _('Finden Sie zu einem Thema, das Sie interessiert, in Ihrer Nähe alle Angebote mit Raumbezug der Hanse- und Universitätsstadt Rostock.') }}</p>
         </a>
       {% if not mobile %}</div>{% endif %}
       {% if not mobile %}<div class="col-md-6">{% endif %}
