--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -206,15 +206,8 @@ footer a:hover {
   color: #d81920;
 }
 
-.tooltip > .tooltip-inner {
-  padding: 10px !important;
-  background-color: #006cb7 !important;
-  text-align: left !important;
-  max-width: 1000px;
-}
-
-.tooltip.right > .tooltip-arrow {
-  border-right-color: #006cb7 !important;
+.yellow {
+  color: #ffcb05;
 }
 
 .modal-progress {
@@ -228,4 +221,38 @@ footer a:hover {
 #loading-modal {
   padding-top: 15% !important;
   overflow-y: visible !important;
+}
+
+.panel-info {
+  border-color: #67a7d0 !important;
+}
+
+.panel-info > .panel-heading {
+  background-color: #67a7d0 !important;
+  border-color: #67a7d0 !important;
+  color: #fff !important;
+}
+
+.panel-primary {
+  border-color: #006cb7 !important;
+}
+
+.panel-primary > .panel-heading {
+  background-color: #006cb7 !important;
+  border-color: #006cb7 !important;
+}
+
+.panel-heading small {
+  color: #fff;
+}
+
+.tooltip > .tooltip-inner {
+  padding: 10px !important;
+  background-color: #006cb7 !important;
+  text-align: left !important;
+  max-width: 1000px;
+}
+
+.tooltip.right > .tooltip-arrow {
+  border-right-color: #006cb7 !important;
 }
