--- a/static/styles/themes.css
+++ b/static/styles/themes.css
@@ -8,10 +8,17 @@
   font-style: italic;
 }
 
-.headline{
+.headline {
   margin-top: 0;
-  margin-bottom: 0;
   text-align: center;
+}
+
+.headline:not(.mobile) {
+  margin-bottom: 0;
+}
+
+.headline.mobile {
+  margin-bottom: 15px;
 }
 
 .leaflet-container {
@@ -102,7 +109,7 @@
   color: #337ab7;
 }
 
-.results-entry:hover{
+.results-entry:hover {
   color: #777;
 }
 
@@ -115,6 +122,7 @@
   height: 34px;
   width: 34px;
   line-height: 34px;
+  margin: 0 -10px 0 -10px;
 }
 
 .slick-prev:before,
@@ -197,7 +205,7 @@
 }
 
 #attributes-modal-link:hover,
-#geoportal-link:hover{
+#geoportal-link:hover {
   color: #777;
 }
 
