--- a/static/styles/themes.css
+++ b/static/styles/themes.css
@@ -1,3 +1,8 @@
+.application-link {
+  text-align: left;
+  padding: 0 5px 0 5px;
+}
+
 .attributes-modal-italic,
 .attributes-modal-text-offer-featuretype,
 .attributes-modal-text-offer-theme,
