--- a/templates/terms_of_use.html
+++ b/templates/terms_of_use.html
@@ -18,6 +18,9 @@
   {{ super() }}
 {% endblock %}
 
+{% block local_scripts %}
+{% endblock %}
+
 {% block content %}
   {% include 'navbar.html' %}
   <div class="container-fluid">
