adjusted privacy policy to the GDPR of the EU

--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -35,8 +35,11 @@
     <p>{{ _('Die Hanse- und Universitätsstadt Rostock setzt für das vorliegende Angebot technische und organisatorische Sicherheitsmaßnahmen ein, um gespeicherte und verwendete Daten gegen zufällige oder vorsätzliche Manipulation, Verlust, Zerstörung oder gegen den Zugriff unberechtigter Dritter zu schützen. Die Sicherheitsmaßnahmen werden entsprechend der technologischen Entwicklung fortlaufend verbessert.') }}</p>
     <h4 class="subheadline">{{ _('Kontakt') }}</h4>
     <p>
-      <span class="full-width">{{ _('Jedermann kann sich an die behördliche Datenschutzbeauftragte der Hanse- und Universitätsstadt Rostock wenden, wenn er der Ansicht ist, in seinen Rechten in Bezug auf den Datenschutz verletzt worden zu sein:') }}</span>
-      <a href="mailto:{{ config.CONTACT_PRIVACY }}">{{ config.CONTACT_PRIVACY }}</a>
+      <span class="full-width">{{ _('Hanse- und Universitätsstadt Rostock') }}</span>
+      <span class="full-width">{{ _('Büro des Oberbürgermeisters') }}</span>
+      <span class="full-width">{{ _('Behördlicher Datenschutz') }}</span>
+      <span class="full-width">18050 Rostock</span>
+      <a href="mailto:datenschutz@rostock.de">datenschutz@rostock.de</a>
     </p>
   </div>
   {% if not mobile %}
