--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -156,107 +156,7 @@
                 <span class="glyphicon glyphicon-filter" aria-hidden="true"></span>
                 <input class="form-control filter-input{% if mobile %} mobile{% endif %}" id="geoservice-filter-input" placeholder="{{ _('Freitextfilter') }}…" type="search" />
                 <span id="clear-geoservice-filter-input" class="clear-filter-input glyphicon glyphicon-remove-circle"></span>
-                <div class="panel-group" id="geoservice-accordion">
-                  {% for geoservice_link in geoservice_links %}
-                    <div class="panel panel-info">
-                      <div class="panel-heading">
-                        <h4 class="panel-title">
-                          <a class="accordion-link" data-toggle="collapse" href="#geoservice-{{ geoservice_link.id }}">
-                            <span class="full-width">{{ geoservice_link.title }}</span>
-                            <small>
-                              {% for group in geoservice_link.id|get_parent_link_children_groups(True) %}
-                                <span class="full-width geoservice-group-tag">{{ group.group }}</span>
-                              {% endfor %}
-                            </small>
-                          </a>
-                        </h4>
-                      </div>
-                      <div id="geoservice-{{ geoservice_link.id }}" class="panel-collapse collapse">
-                        <div class="panel-body">
-                          {% set link_children_tags = geoservice_link.id|get_parent_link_children_tags(True) %}
-                          {% if link_children_tags|length > 0 %}
-                            <h5 class="first"><span class="glyphicon glyphicon-tag" aria-hidden="true"></span> {{ _('Schlagworte/Tags/Keywords') }}</h5>
-                            <span class="full-width">
-                              {% for tag in link_children_tags %}
-                                  {{ tag }}{% if not loop.last %} •{% endif %}
-                              {% endfor %}
-                            </span>
-                          {% endif %}
-                          {% set geoportal_sublink = geoservice_link.id|get_link_sublink('geoportal') %}
-                          {% set geoportal_mobile_sublink = geoservice_link.id|get_link_sublink('geoportal_mobile') %}
-                          {% if geoportal_sublink != None or geoportal_mobile_sublink != None %}
-                            <h5><span class="glyphicon glyphicon-picture" aria-hidden="true"></span> {{ _('Vorschau') }}</h5>
-                            {% if geoportal_sublink != None %}
-                              <span class="full-width"><span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> {{ _('Desktop') }}</span>
-                              <a href="{{ geoportal_sublink.link }}" target="_blank">
-                                <span class="glyphicon glyphicon-margin-right glyphicon-{% if geoportal_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if geoportal_sublink.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ geoportal_sublink.reachable_last_check|datetime_l10n('full') }}"{% endif %}></span><span class="glyphicon glyphicon-margin-right glyphicon-eye-{% if geoportal_sublink.public == True %}open green{% else %}close red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if geoportal_sublink.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"{% endif %}></span>{{ geoportal_sublink.title }}
-                              </a>
-                            {% endif %}
-                            {% if geoportal_mobile_sublink != None %}
-                              <span class="full-width"><span class="glyphicon glyphicon-phone" aria-hidden="true"></span> {{ _('mobil') }}</span>
-                              <a href="{{ geoportal_mobile_sublink.link }}" target="_blank">
-                                <span class="glyphicon glyphicon-margin-right glyphicon-{% if geoportal_mobile_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if geoportal_mobile_sublink.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ geoportal_mobile_sublink.reachable_last_check|datetime_l10n('full') }}"{% endif %}></span><span class="glyphicon glyphicon-margin-right glyphicon-eye-{% if geoportal_mobile_sublink.public == True %}open green{% else %}close red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if geoportal_mobile_sublink.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"{% endif %}></span>{{ geoportal_mobile_sublink.title }}
-                              </a>
-                            {% endif %}
-                          {% endif %}
-                          {% for child in geoservice_link.id|get_parent_link_children(False, True) %}
-                            <div class="geoservice-child">
-                              <h5 {% if link_children_tags|length == 0 %}class="first"{% endif %}><span class="glyphicon glyphicon-globe" aria-hidden="true"></span> {{ child.group }}</h5>
-                              {% if 'inspire' in child.group|lower and child.inspire_annex_theme != None %}
-                                <span class="full-width"><span class="glyphicon glyphicon-flag" aria-hidden="true"></span> {{ _('Annex-Thema') }}</span>
-                                <span class="full-width">{{ child.inspire_annex_theme }}</span>
-                              {% endif %}
-                              <span class="full-width"><span class="glyphicon glyphicon-comment" aria-hidden="true"></span> {{ _('Beschreibung') }}</span>
-                              <span class="full-width">{{ child.description }}</span>
-                              {% if 'inspire' in child.group|lower %}
-                                {% set metadata_sublink = child.id|get_link_sublink('metadata') %}
-                                {% if metadata_sublink != None %}
-                                  <span class="full-width"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span> {{ _('Metadaten') }}</span>
-                                  <a href="{{ metadata_sublink.link }}" target="_blank">
-                                    <span class="glyphicon glyphicon-margin-right glyphicon-{% if metadata_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if metadata_sublink.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ metadata_sublink.reachable_last_check|datetime_l10n('full') }}"{% endif %}></span><span class="glyphicon glyphicon-margin-right glyphicon-eye-{% if metadata_sublink.public == True %}open green{% else %}close red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if metadata_sublink.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"{% endif %}></span>{{ metadata_sublink.title }}
-                                  </a>
-                                {% endif %}
-                              {% endif %}
-                              <span class="full-width"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> {{ _('Link') }}</span>
-                              <a href="{{ child.link }}" target="_blank">
-                                <span class="glyphicon glyphicon-margin-right glyphicon-{% if child.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if child.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ child.reachable_last_check|datetime_l10n('full') }}"{% endif %}></span><span class="glyphicon glyphicon-margin-right glyphicon-eye-{% if child.public == True %}open green{% else %}close red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if child.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"{% endif %}></span>{{ child.link }}
-                              </a>
-                            </div>
-                          {% endfor %}
-                          {% if geoservice_link.date != None or geoservice_link.authorship_organisation != None or geoservice_link.authorship_name != None or geoservice_link.authorship_mail != None or geoservice_link.data_link != None %}
-                            <h5><span class="glyphicon glyphicon-home" aria-hidden="true"></span> {{ _('Datenquelle') }}</h5>
-                            {% if geoservice_link.date != None %}
-                              <span class="full-width"><span class="glyphicon glyphicon-time" aria-hidden="true"></span> {{ _('Stand') }}</span>
-                              <span class="full-width">{{ geoservice_link.date|date_l10n('full') }}</span>
-                            {% endif %}
-                            {% if geoservice_link.authorship_organisation != None or geoservice_link.authorship_name != None or geoservice_link.authorship_mail != None %}
-                              <span class="full-width"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ ngettext('Autor', 'Autoren', geoservice_link.authorship_organisation|length) }}</span>
-                              {% for authorship_organisation in geoservice_link.authorship_organisation %}
-                                <span class="full-width">
-                                  {% if geoservice_link.authorship_name[loop.index0] != None %}
-                                    {{ geoservice_link.authorship_name[loop.index0] }}
-                                    {% if geoservice_link.authorship_mail[loop.index0] != None %}
-                                      <a href="mailto:{{ geoservice_link.authorship_mail[loop.index0] }}"><span class="glyphicon glyphicon-envelope"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{{ _('Kontakt') }}"{% endif %}></span></a>
-                                    {% endif %}
-                                    •
-                                  {% endif %}
-                                  {{ authorship_organisation }}
-                                </span>
-                              {% endfor %}
-                            {% endif %}
-                            {% set opendata_sublink = geoservice_link.id|get_link_sublink('opendata') %}
-                            {% if opendata_sublink != None %}
-                              <span class="full-width"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> {{ _('Link') }}</span>
-                              <a href="{{ opendata_sublink.link }}" target="_blank">
-                                <span class="glyphicon glyphicon-margin-right glyphicon-{% if opendata_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if opendata_sublink.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ opendata_sublink.reachable_last_check|datetime_l10n('full') }}"{% endif %}></span><span class="glyphicon glyphicon-margin-right glyphicon-eye-{% if opendata_sublink.public == True %}open green{% else %}close red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if opendata_sublink.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"{% endif %}></span>{{ opendata_sublink.title }}
-                              </a>
-                            {% endif %}
-                          {% endif %}
-                        </div>
-                      </div>
-                    </div>
-                  {% endfor %}
-                </div>
+                <div class="panel-group" id="geoservice-accordion"></div>
               {% endif %}
               {% if category.category == 'helper' %}
                 <span class="glyphicon glyphicon-filter" aria-hidden="true"></span>
