--- a/templates/geoservices.html
+++ b/templates/geoservices.html
@@ -14,11 +14,11 @@
     </div>
     <div id="geoservice-{{ geoservice_link.id }}" class="panel-collapse collapse">
       <div class="panel-body">
-        {% set link_children_tags = geoservice_link.id|get_parent_link_children_tags(True) %}
-        {% if link_children_tags|length > 0 %}
+        {% set tags = geoservice_link.id|get_parent_link_children_tags(True) %}
+        {% if tags|length > 0 %}
           <h5 class="first"><span class="glyphicon glyphicon-tag" aria-hidden="true"></span> {{ _('Schlagworte/Tags/Keywords') }}</h5>
           <span class="full-width">
-            {% for tag in link_children_tags %}
+            {% for tag in tags %}
                 {{ tag }}{% if not loop.last %} •{% endif %}
             {% endfor %}
           </span>
@@ -42,10 +42,10 @@
         {% endif %}
         {% for child in geoservice_link.id|get_parent_link_children(False, True) %}
           <div class="geoservice-child">
-            <h5 {% if link_children_tags|length == 0 %}class="first"{% endif %}><span class="glyphicon glyphicon-globe" aria-hidden="true"></span> {{ child.group }}</h5>
+            <h5 {% if tags|length == 0 %}class="first"{% endif %}><span class="glyphicon glyphicon-globe" aria-hidden="true"></span> {{ child.group }}</h5>
             {% if 'inspire' in child.group|lower and child.inspire_annex != None and child.inspire_short != None and child.inspire_theme_de != None and child.inspire_theme_en != None and child.inspire_link != None %}
               <span class="full-width"><span class="glyphicon glyphicon-flag" aria-hidden="true"></span> {{ _('Thema') }}</span>
-              <span class="full-width">Annex {{ child.inspire_annex|int_to_roman }} – <a href="{{ child.inspire_link }}" target="_blank">{% if g.current_lang == 'de' %}{{child.inspire_theme_de}}{% else %}{{child.inspire_theme_en}}{% endif %} ({{ child.inspire_short }})</a></span>
+              <span class="full-width">Annex {{ child.inspire_annex|int_to_roman }} – <a href="{{ child.inspire_link }}" target="_blank">{% if g.current_lang == 'de' %}{{ child.inspire_theme_de }}{% else %}{{ child.inspire_theme_en }}{% endif %} ({{ child.inspire_short }})</a></span>
             {% endif %}
             <span class="full-width"><span class="glyphicon glyphicon-comment" aria-hidden="true"></span> {{ _('Beschreibung') }}</span>
             <span class="full-width">{{ child.description }}</span>
@@ -57,9 +57,11 @@
               </a>
             {% endif %}
             <span class="full-width"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> {{ _('Link') }}</span>
-            <a href="{{ child.link }}" target="_blank">
-              <span class="glyphicon glyphicon-margin-right glyphicon-{% if child.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if child.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ child.reachable_last_check|datetime_l10n('full') }}"{% endif %}></span><span class="glyphicon glyphicon-margin-right glyphicon-eye-{% if child.public == True %}open green{% else %}close red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if child.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"{% endif %}></span>{{ child.link }}
-            </a>
+            <strong>
+              <a href="{{ child.link }}" target="_blank">
+                <span class="glyphicon glyphicon-margin-right glyphicon-{% if child.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if child.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ child.reachable_last_check|datetime_l10n('full') }}"{% endif %}></span><span class="glyphicon glyphicon-margin-right glyphicon-eye-{% if child.public == True %}open green{% else %}close red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if child.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"{% endif %}></span>{{ child.link }}
+              </a>
+            </strong>
           </div>
         {% endfor %}
         {% if geoservice_link.date != None or geoservice_link.authorship_organisation != None or geoservice_link.authorship_name != None or geoservice_link.authorship_mail != None %}
@@ -86,9 +88,11 @@
           {% set opendata_sublink = geoservice_link.id|get_link_sublink('opendata') %}
           {% if opendata_sublink != None %}
             <span class="full-width"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> {{ _('Link') }}</span>
-            <a href="{{ opendata_sublink.link }}" target="_blank">
-              <span class="glyphicon glyphicon-margin-right glyphicon-{% if opendata_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if opendata_sublink.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ opendata_sublink.reachable_last_check|datetime_l10n('full') }}"{% endif %}></span><span class="glyphicon glyphicon-margin-right glyphicon-eye-{% if opendata_sublink.public == True %}open green{% else %}close red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if opendata_sublink.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"{% endif %}></span>{{ opendata_sublink.title }}
-            </a>
+            <strong>
+              <a href="{{ opendata_sublink.link }}" target="_blank">
+                <span class="glyphicon glyphicon-margin-right glyphicon-{% if opendata_sublink.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if opendata_sublink.reachable == True %}{{ _('erreichbar') }}{% else %}{{ _('nicht erreichbar') }}{% endif %} – {{ _('letzte Prüfung') }}: {{ opendata_sublink.reachable_last_check|datetime_l10n('full') }}"{% endif %}></span><span class="glyphicon glyphicon-margin-right glyphicon-eye-{% if opendata_sublink.public == True %}open green{% else %}close red{% endif %}"{% if not mobile %} aria-hidden="true" data-toggle="tooltip" data-placement="right" title="{% if opendata_sublink.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"{% endif %}></span>{{ opendata_sublink.title }}
+              </a>
+            </strong>
           {% endif %}
         {% endif %}
       </div>
